--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -35,8 +35,7 @@ body {
     width: 300px;
     height: 20px;
     outline: none;
-    transform: rotate(-90deg) translate(-50%, -50%);
-    transform-origin: 0 0;
+    transform: rotate(-90deg);
   }
 
     </style>
