--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -1,57 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>PTime</title>
-   <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.css"> 
-   <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
-   <script src="//code.jquery.com/mobile/1.5.0-alpha.1/jquery.mobile-1.5.0-alpha.1.min.js"></script>  
+<html>
 
-    <style>
+<head>
+	<!-- Compressed CSS -->
+	<link rel="stylesheet" href=
+"https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
+		crossorigin="anonymous" />
+
+	<!-- Compressed JavaScript -->
+	<script src=
+"https://cdnjs.cloudflare.com/ajax/libs/foundation/6.0.1/js/vendor/jquery.min.js">
+	</script>
+	<script src=
+"https://cdn.jsdelivr.net/npm/foundation-sites@6.5.1/dist/js/foundation.min.js"
+		crossorigin="anonymous">
+	</script>
+</head>
+
+<body>
+	<center>
+
+      <strong>Value is:</strong>
+		<input type="number" class="button"
+			name="" id="slidervalue">
+
+		<div class="slider vertical"
+			data-slider data-initial-start="1"
+			data-end="100" data-vertical="true">
+			
+			<span class="slider-handle"
+				data-slider-handle role="slider"
+				aria-controls="slidervalue">
+			</span>
+			
+			<span class="slider-fill"
+				data-slider-fill>
+			</span>
+		</div> <br>
 
 
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+	</center>
 
-.slider-container {
-    position: relative;
- }
- 
- .slider-container .slider {
-    position: absolute;
-    z-index: 3;
-    left: 50%;
-    top: 50%;
-    margin: 0;
-    width: 300px;
-    height: 20px;
-    outline: none;
-    transform: rotate(-90deg);
-  }
+	<script>
+		$(document).ready(function () {
+			$(document).foundation();
+		});
 
-    </style>
-
-  </head>
-  <body>
-  
-   <div class="middle">
-      <div class="slide-container" >
-        <input type="range" name="savetime-slider" class="slider" id="savetime-slider" value="60" min="0" max="300"/>
-      </div>
-   </div>
-
-    <script>
-
-         function reset() {
+        function reset() {
             document.querySelector('input[name="exittime"]').value = "";
             document.querySelector('input[name="productivity"]').value = "";
             document.querySelector('input[name="totaltimehour"]').value = "08";
