--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -18,10 +18,11 @@
 </head>
 
 <body>
+
+
 	<center>
 
-      <strong>Value is:</strong>
-		<input type="number" class="button"
+		<input type="number" class="button slidervaluebutton"
 			name="" id="slidervalue">
 
 		<div class="slider vertical"
@@ -40,6 +41,14 @@
 
 
 	</center>
+
+   <style>
+
+      .slidervaluebutton {
+         width: 100px;
+      }
+
+   </style>
 
 	<script>
 		$(document).ready(function () {
