--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -22,7 +22,8 @@
 
 	<center>
 
-		<input type="number" class="button slidervaluebutton"
+      <div class="slider-container">
+		<input type="number" class="button"
 			name="" id="slidervalue">
 
 		<div class="slider vertical"
@@ -37,14 +38,15 @@
 			<span class="slider-fill"
 				data-slider-fill>
 			</span>
-		</div> <br>
+		</div>
+     </div>
 
 
 	</center>
 
    <style>
 
-      .slidervaluebutton {
+      .slider-container {
          width: 100px;
       }
 
