--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -23,8 +23,9 @@
 	<center>
 
       <div class="slider-container">
+      <span> Check In </Span>
 		<input type="number" class="button"
-			name="" id="slidervalue">
+			name="" id="checkin">
 
 		<div class="slider vertical"
 			data-slider data-initial-start="1"
@@ -32,7 +33,7 @@
 			
 			<span class="slider-handle"
 				data-slider-handle role="slider"
-				aria-controls="slidervalue">
+				aria-controls="checkin">
 			</span>
 			
 			<span class="slider-fill"
@@ -41,6 +42,85 @@
 		</div>
      </div>
 
+     <div class="slider-container">
+      <span> Treatment Time </Span>
+		<input type="number" class="button"
+			name="" id="treatmenttime">
+
+		<div class="slider vertical"
+			data-slider data-initial-start="1"
+			data-end="100" data-vertical="true">
+			
+			<span class="slider-handle"
+				data-slider-handle role="slider"
+				aria-controls="treatmenttime">
+			</span>
+			
+			<span class="slider-fill"
+				data-slider-fill>
+			</span>
+		</div>
+     </div>
+
+     <div class="slider-container">
+      <span> Group Time </Span>
+		<input type="number" class="button"
+			name="" id="grouptime">
+
+		<div class="slider vertical"
+			data-slider data-initial-start="1"
+			data-end="100" data-vertical="true">
+			
+			<span class="slider-handle"
+				data-slider-handle role="slider"
+				aria-controls="grouptime">
+			</span>
+			
+			<span class="slider-fill"
+				data-slider-fill>
+			</span>
+		</div>
+     </div>
+
+     <div class="slider-container">
+      <span> Clock Out </Span>
+		<input type="number" class="button"
+			name="" id="clockout">
+
+		<div class="slider vertical"
+			data-slider data-initial-start="1"
+			data-end="100" data-vertical="true">
+			
+			<span class="slider-handle"
+				data-slider-handle role="slider"
+				aria-controls="clockout">
+			</span>
+			
+			<span class="slider-fill"
+				data-slider-fill>
+			</span>
+		</div>
+     </div>
+
+     <div class="slider-container">
+      <span> Productivity </Span>
+		<input type="number" class="button"
+			name="" id="productivity">
+
+		<div class="slider vertical"
+			data-slider data-initial-start="1"
+			data-end="100" data-vertical="true">
+			
+			<span class="slider-handle"
+				data-slider-handle role="slider"
+				aria-controls="productivity">
+			</span>
+			
+			<span class="slider-fill"
+				data-slider-fill>
+			</span>
+		</div>
+     </div>
 
 	</center>
 
@@ -48,6 +128,7 @@
 
       .slider-container {
          width: 100px;
+         vertical-align: middle;
       }
 
    </style>
