--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -20,9 +20,9 @@
 <body>
 
 
-	<center>
+	<div class="container">
 
-      <div class="slider-container">
+      <span class="slider-container">
       <span> Check In </Span>
 		<input type="number" class="button"
 			name="" id="checkin">
@@ -40,9 +40,9 @@
 				data-slider-fill>
 			</span>
 		</div>
-     </div>
+   </span>
 
-     <div class="slider-container">
+     <span  class="slider-container">
       <span> Treatment Time </Span>
 		<input type="number" class="button"
 			name="" id="treatmenttime">
@@ -60,9 +60,9 @@
 				data-slider-fill>
 			</span>
 		</div>
-     </div>
+   </span>
 
-     <div class="slider-container">
+     <span class="slider-container">
       <span> Group Time </Span>
 		<input type="number" class="button"
 			name="" id="grouptime">
@@ -80,9 +80,9 @@
 				data-slider-fill>
 			</span>
 		</div>
-     </div>
+   </span>
 
-     <div class="slider-container">
+     <span class="slider-container">
       <span> Clock Out </Span>
 		<input type="number" class="button"
 			name="" id="clockout">
@@ -100,9 +100,9 @@
 				data-slider-fill>
 			</span>
 		</div>
-     </div>
+   </span>
 
-     <div class="slider-container">
+     <span class="slider-container">
       <span> Productivity </Span>
 		<input type="number" class="button"
 			name="" id="productivity">
@@ -120,12 +120,15 @@
 				data-slider-fill>
 			</span>
 		</div>
-     </div>
+   </span>
 
-	</center>
+	</div>
 
    <style>
 
+      .container {
+         text-align:center;
+      }
       .slider-container {
          width: 100px;
          vertical-align: middle;
