--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -21,8 +21,8 @@
 
 
 	<div class="container">
-
-      <span class="slider-container">
+      <span>
+      <div class="slider-container">
       <span> Check In </Span>
 		<input type="number" class="button"
 			name="" id="checkin">
@@ -40,9 +40,10 @@
 				data-slider-fill>
 			</span>
 		</div>
-   </span>
-
-     <span  class="slider-container">
+     </div>
+     </span>
+     <span>
+     <div class="slider-container">
       <span> Treatment Time </Span>
 		<input type="number" class="button"
 			name="" id="treatmenttime">
@@ -60,9 +61,10 @@
 				data-slider-fill>
 			</span>
 		</div>
+     </div>
    </span>
-
-     <span class="slider-container">
+     <span>
+     <div class="slider-container">
       <span> Group Time </Span>
 		<input type="number" class="button"
 			name="" id="grouptime">
@@ -80,9 +82,10 @@
 				data-slider-fill>
 			</span>
 		</div>
+     </div>
    </span>
-
-     <span class="slider-container">
+   <span>
+     <div class="slider-container">
       <span> Clock Out </Span>
 		<input type="number" class="button"
 			name="" id="clockout">
@@ -100,9 +103,10 @@
 				data-slider-fill>
 			</span>
 		</div>
+     </div>
    </span>
-
-     <span class="slider-container">
+   <span>
+     <div class="slider-container">
       <span> Productivity </Span>
 		<input type="number" class="button"
 			name="" id="productivity">
@@ -120,8 +124,9 @@
 				data-slider-fill>
 			</span>
 		</div>
+     </div>
    </span>
-
+   
 	</div>
 
    <style>
