--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Compressed CSS -->
 	<link rel="stylesheet" href=
 "https://cdn.jsdelivr.net/npm/foundation-sites@6.7.4/dist/css/foundation.min.css"
