--- a/productivity/index2.html
+++ b/productivity/index2.html
@@ -82,8 +82,10 @@
 			</span>
 		</div>
      </div>
-   
-     <div id="box4" class="slider-container">
+   </div>
+
+   <div class="container">
+     <div id="box1" class="slider-container">
       <span> Clock Out </Span>
 		<input type="number" class="button"
 			name="" id="clockout">
@@ -103,7 +105,7 @@
 		</div>
      </div>
    
-     <div id="box5" class="slider-container">
+     <div id="box2" class="slider-container">
       <span> Productivity </Span>
 		<input type="number" class="button"
 			name="" id="productivity">
@@ -138,28 +140,20 @@
 
       #box1 {
          float:left; 
-         width:20%;
+         width:33%;
       }
       
       #box2{
          float:left; 
-         width:20%;
+         width:33%;
       }
 
       #box3{
-         float:left; 
-         width:20%;
+         float:right; 
+         width:33%;
       }
       
-      #box4{
-         float:left; 
-         width:20%;
-      }
-
-      #box5{
-         float:right;
-         width:20%;
-      }
+   
 
    </style>
 
