--- a/productivity/index.html
+++ b/productivity/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>PTime</title>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="./appicons/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="./manifest.json">
     <style>
 .without_ampm::-webkit-datetime-edit-ampm-field {
    display: none;
@@ -182,7 +182,7 @@
         * Register Service Worker
         */
        navigator.serviceWorker
-           .register('/sw.js', { scope: '/' })
+           .register('./sw.js', { scope: '/' })
            .then(() => {
                console.log('Service Worker Registered');
            });
